core/roboconf-core/src/test/resources/configurations/valid/simple-installer.graph
A {
	installer: my-own-installer;
}
