core/roboconf-core/src/test/resources/configurations/invalid/component-duplicate-property.graph

Component {
	installer: bash;
	installer: puppet;
}
